# AGV_system_design

./: README.md
doc/: 智能巡检综合系统通信协议.doc
src/MappingLocalization/: lidar_localization.tar.xz  matching_flow.cpp
src/MappingLocalization/LIO-SAM/: CMakeLists.txt
src/MappingLocalization/LIO-SAM/config/: params.yaml
src/MappingLocalization/LIO-SAM/include/: utility.h
src/MappingLocalization/LIO-SAM/launch/: bag_play.launch  bag_record.launch  lio_sam.launch  run_mapping.launch  run_mapping_bag.launch
src/MappingLocalization/LIO-SAM/src/: featureExtraction.cpp  imageProjection.cpp  imuPreintegration.cpp  localization.cpp  mapOptmization.cpp
src/MappingLocalization/gps_enu/: CMakeLists.txt  package.xml
src/MappingLocalization/lidar_localization/: CMakeLists.txt  package.xml
src/MappingLocalization/rs_to_velodyne/: CMakeLists.txt
src/control/car_ctr/: CMakeLists.txt  package.xml  show.rviz
src/control/car_ctr/launch/: run.launch
src/control/car_ctr/msg/: car_ctr.msg  car_state.msg
src/control/car_ctr/src/: car_ctr.cpp
src/control/keyboard/: CMakeLists.txt  package.xml
src/control/keyboard/launch/: run.launch
src/control/keyboard/src/: keyboard.cpp
src/control/pathtrack/: CMakeLists.txt  package.xml  show.rviz
src/control/pathtrack/launch/: run.launch
src/control/pathtrack/msg/: track_state.msg
src/control/pathtrack/src/: pathtrack.cpp  pathtrack_bk.cpp  selfturnctr.cpp  speedlimit.cpp
src/control/turntable/: CMakeLists.txt  allshow.rviz  package.xml  plugin_description.xml  show.rviz
src/control/turntable/include/: cloudeva.h  mytarget.h
src/control/turntable/launch/: allrun.launch  run.launch
src/control/turntable/src/: motordrv_pdo.h  motordrv_sdo.h  turntable.cpp
src/control/turntable/src/panel/: turntable.ui  turntable_panel.cpp  turntable_panel.h  ui_turntable.h
src/control/workctr/: CMakeLists.txt  package.xml  show.rviz
src/data_comm/: CMakeLists.txt  package.xml  show.rviz
src/data_comm/launch/: run.launch
src/data_comm/msg/: battery_info.msg  car_angle.msg  car_ctr.msg  car_state.msg  paw_ctr.msg  paw_msg.msg  paw_state.msg  track_state.msg
src/data_comm/src/: can_comm.cpp
src/global_plan_sim/: CMakeLists.txt  package.xml  plugin_description.xml  show.rviz  showaa.rviz  test.rviz
src/global_plan_sim/launch/: bag_record.launch  run.launch
src/global_plan_sim/path/: config1.yaml  config2.yaml  config3.yaml
src/global_plan_sim/src/: localpathplan.cpp
src/global_plan_sim/src/panel/: global_plan_sim.ui  global_plan_sim_panel.cpp  global_plan_sim_panel.h  node_check.cpp  node_check.h  node_check.ui  ui_global_plan_sim.h  ui_nodecheck.h
src/mqtt/mqtt_comm/: CMakeLists.txt  package.xml  show.rviz  show1.rviz
src/mqtt/mqtt_comm/config/: params.yaml
src/mqtt/mqtt_comm/launch/: run_test.launch
src/mqtt/mqtt_comm/msg/: mqtt_controls.msg  mqtt_task.msg  path_point.msg  path_point_action.msg  resp_agvstate.msg  resp_ctrl.msg  resp_task.msg  resp_video.msg  task.msg
src/mqtt/mqtt_comm/src/: mqtt_comm.cpp
src/perception/: around_lidar.tar.xz
src/perception/obs_check/: CMakeLists.txt  package.xml  pcd.rviz  show.rviz  show_obs.rviz  show_tmp.rviz  showx.rviz
src/sensor/camera_lbas/: CMakeLists.txt  help.txt  lib_names.txt  load_so.py  package.xml
src/sensor/gps/: CMakeLists.txt  package.xml  show.rviz
src/sensor/gps/include/: NavConversion.h
src/sensor/gps/launch/: run.launch  run_bagmode.launch  run_base.launch
src/sensor/gps/pathdata/: 1.txt  1123.txt  1643358459.txt  1643359106.txt  1643359114.txt  1643359117.txt  1643359125.txt  1643359176.txt  1643360403.txt  1643360562.txt  1643360564.txt  1643362398.txt  1643362573.txt  1643363650.txt  1643363804.txt  1643542016.txt  1643545831.txt  1644481240.txt  1644482884.txt  2.txt  3.txt  a.txt
src/sensor/gps/src/: gps_base.cpp  gps_pro.cpp
src/sensor/h264_server/: CMakeLists.txt  package.xml
src/sensor/h264_server/include/: MyEncoder.h  TermSig.h  codec_server.h
src/sensor/h264_server/launch/: rtmp_stream.launch  rtmp_stream_if.launch  run.launch
src/sensor/h264_server/scripts/: rtmp_stream_audio.py  rtmp_stream_video.py
src/sensor/h264_server/src/: MyEncoder.cpp  codec_server.cpp  push_h264.cpp  rtmp_stream.cpp
src/sensor/if_camera/: CMakeLists.txt  package.xml
src/sensor/if_camera/include/: IRNET.H
src/sensor/if_camera/launch/: run.launch
src/sensor/if_camera/src/: main.cpp  main1.cpp
src/sensor/if_camera/src/IRNetDemo/: .qmake.stash  IRNetDemo.pro  IRNetDemo.pro.user.2f98a7b  IRNetDemo.pro.user.a2c46d9  Makefile  Makefile.Debug  Makefile.Release  analysisgraphicsitem.cpp  analysisgraphicsitem.h  analysisgraphicswidget.cpp  analysisgraphicswidget.h  common.h  irnetsdkmanager.cpp  irnetsdkmanager.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  playerwidget.cpp  playerwidget.h  playerwidget1.cpp  superslider.cpp  superslider.h  ui_mainwindow.h
src/sensor/if_camera/src/IRNetDemo/utils/: config.cpp  config.h
src/sensor/lpms_ig1/: CMakeLists.txt  libLpmsIG1_OpenSource-0.3.1-Linux.deb
src/sensor/lpms_ig1/launch/: lpmsbe1.launch  lpmscurs3.launch  lpmsig1.launch  lpmsig1_rs485.launch  lpmsnav3.launch
src/sensor/lpms_ig1/src/: imudata_rad_to_deg_node.cpp  lpms_be1_node.cpp  lpms_curs3_node.cpp  lpms_ig1_node.cpp  lpms_ig1_rs485_client.cpp  lpms_ig1_rs485_node.cpp  lpms_nav3_node.cpp
src/sensor/radar/: CMakeLists.txt  package.xml  show.rviz
src/share/common/: CMakeLists.txt  package.xml
src/share/common/include/common/: can.h  mySub.h  mydisplay.h  myudp.h  public.h  pudp.h  serial_wsk.h
src/share/common/src/: can.cpp  mySub.cpp  public.cpp
底层驱动/: .BITCar.cpp.swp  Axis.cpp  Axis.h  BITCar.cpp  BITCar.h  CMakeLists.txt  GPS.cpp  GPS.h  Gpio.h  NavConversion.h  QuadProg++.hh  README.md  Serial.cpp  Serial.h  can.cpp  can.h  command.cpp  command.h  inic.cpp  inic.h  main.cpp  motordrv.cpp  motordrv.h  mount.sh  myudp.cpp  myudp.h  public.cpp  public.h
底层驱动/cmakes/: CMakeCache.txt  Car_8drv_.cbp  Car_8drv_Lite  Car_8drv_Lite.cbp  Car_8drv_unstable.cbp  Car_test_unstable.cbp  Makefile  cmake_install.cmake
底层驱动/log/: latest_list
(+638 files in other folders)
