<?xml version="1.0"?>
<package format="2">
  <name>global_plan_sim</name>
  <version>0.0.0</version>
  <description>The angle_can 7100 package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="wsk@todo.todo">wsk</maintainer>
  <license>TODO</license>


  <!-- <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exc_depend>message_runtime</exc_depend> -->

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rviz</depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>common</depend>
  <depend>gps</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
